--- a/src/app/views/layouts/default.jade
+++ b/src/app/views/layouts/default.jade
@@ -8,8 +8,8 @@ html
         title #{title}
 
         link(rel="icon", type="image/x-icon", href="/favicon.ico")
-        //link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.css")
-        link(rel="stylesheet", href="/vendor/bootstrap-theme/css/flatly.css")
+        link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/vendor/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet", href="/asset/css/style.css")
 
