#67: Config the menu items

--- a/src/app/views/layouts/backend.jade
+++ b/src/app/views/layouts/backend.jade
@@ -45,6 +45,8 @@ html
                                     a(href="/admin/user") Administrators
                                 li
                                     a(href="/admin/log/download") Download History
+                                li
+                                    a(href="/admin/menu") Configure Menu
 
                         // Right nav
                         ul.t-right-nav.nav.navbar-nav.navbar-right
