--- a/src/app/views/account/view.jade
+++ b/src/app/views/account/view.jade
@@ -22,29 +22,41 @@ block content
 
     div.tab-content
         div#overview.tab-pane.active
-            div.col-lg-4.text-center
-                p
-                    a(href=package.type == 'template' ? '#{frontEndUrl}#' + package.slug : package.demo_url)
-                        img.img-responsive.img-thumbnail(src=package.thumbs && package.thumbs.medium ? '#{thumbPrefixUrl}' + package.thumbs.medium : '/asset/img/noimage.png')
-                if package.demo_url
-                    a.btn.btn-info.btn-lg(href=package.type == 'template' ? '#{frontEndUrl}#' + package.slug : package.demo_url) Live Demo
+            div.row
+                div.col-lg-4.text-center
+                    p
+                        a(href=package.type == 'template' ? '#{frontEndUrl}#' + package.slug : package.demo_url)
+                            img.img-responsive.img-thumbnail(src=package.thumbs && package.thumbs.medium ? '#{thumbPrefixUrl}' + package.thumbs.medium : '/asset/img/noimage.png')
+                    if package.demo_url
+                        a.btn.btn-info.btn-lg(href=package.type == 'template' ? '#{frontEndUrl}#' + package.slug : package.demo_url) Live Demo
 
-            div.col-lg-8
-                dl.dl-horizontal
-                    if package.responsive
-                        dt.text-info Responsive
-                        dd
-                            i.fa.fa-check
-                    dt.text-info Supported browsers
-                    dd #{package.browsers.split(',').join(', ')}
+                div.col-lg-8
+                    dl.dl-horizontal
+                        dt.text-success Created on
+                        dd #{moment(package.created_date).format('YYYY-MM-DD')}
 
-                    if package.software_versions
-                        dt.text-info Compatible with
-                        dd
-                            for software in package.software_versions.split(',')
-                                span.label.label-success(style="margin: 0 5px;") #{software}
+                        if package.updated_date
+                            dt.text-success Last updated on
+                            dd #{moment(package.updated_date).format('YYYY-MM-DD')}
 
-                | !{package.description.replace(/\n/g, '<br/>')}
+                        if package.responsive
+                            dt.text-success Responsive
+                            dd
+                                i.fa.fa-check
+
+                        if package.browsers
+                            dt.text-success Supported browsers
+                            dd
+                                for browser in package.browsers.split(',')
+                                    span.label.label-info(style="margin: 0 5px;") #{browser}
+
+                        if package.software_versions
+                            dt.text-success Compatible with
+                            dd
+                                for software in package.software_versions.split(',')
+                                    span.label.label-success(style="margin: 0 5px;") #{software}
+
+                    | !{package.description.replace(/\n/g, '<br/>')}
 
         div#changelog.tab-pane
             if package.changelog
@@ -75,7 +87,8 @@ block content
                                     if file.description
                                         small.text-success #{file.description}
                                 td #{filesize(file.size)}
-                                td #{file.num_downloads}
+                                td
+                                    span.badge #{file.num_downloads}
                                 td
                                     if isDownloadable
                                         a.btn.btn-info(href="#{downloadUrl}/account/download/#{package.slug}/#{file._id}") Download
