Adjust width of Downloads column

--- a/src/app/views/package/edit.jade
+++ b/src/app/views/package/edit.jade
@@ -177,10 +177,10 @@ block content
                     thead
                         tr
                             th File name / Size
-                            th(style="width: 30%") Description
+                            th(style="width: 25%") Description
                             th(style="width: 25%") Progress
                             th(style="width: 150px;")
-                                span(data-toggle="tooltip", data-title="Include the number of file downloads in the total number of package downloads") Include Downloads
+                                span(data-toggle="tooltip", data-title="Include the number of file downloads in the total number of package downloads") Downloads
                             th Actions
                     tbody#uploadedFiles
                         tr#fileRowTemplate.hide
