--- a/src/app/views/package/index.jade
+++ b/src/app/views/package/index.jade
@@ -71,7 +71,7 @@ block content
                             else if ('created_date' == sortBy && -1 == sortDirection)
                                 | &darr;&nbsp;
                             | Created date
-                    th # Downloads
+                    th Downloads
                     th Actions
             tbody
                 for package in packages
